0031802: Samples: Overview QT - Geometry - Labels do not match with objects  Remove unused function